# rating_analysis

./: .dockerignore  .flake8  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  exam.md  project.md  pyproject.toml  requirements.txt  setup.bat  setup.sh  setup_and_test.sh
.github/workflows/: test.yml
examples/: data.csv
rating_analysis/: main.py
rating_analysis/report/: average_rating.py  base.py
rating_analysis/utils/: file_reader.py  models.py
src/: main.py
src/report/: average_rating.py  base.py
src/utils/: file_reader.py  models.py
tests/: test_average_rating.py  test_file_reader.py  test_main.py
